v1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo-app
spec:
  containers:
  - name: echo-app
    image:  yanissdu33/wik-dps-tp02:latest
    ports:
    - containerPort: 80
