v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo-app
  name: echo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-app
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: echo-app
    spec:
      containers:
      - name: echo-app
        image:  yanissdu33/wik-dps-tp02:latest
        ports:
        - containerPort: 8080
      restartPolicy: Always
