v4.yaml
apiVersion: v1
kind: Service
metadata:
 name: echo-app-svc
spec:
 ports:
 - port: 8080
   protocol: TCP
   targetPort: 3008
   nodePort: 31000
 selector:
   app: echo-app
 type: NodePort
