ingress.yaml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
   
metadata:
   
  name: example-ingress
   
  annotations:
   
    nginx.ingress.kubernetes.io/rewrite-target: /$1
   
spec:
   
  rules:
   
    - host: wik-dps-tp02.echo
   
      http:
   
        paths:
   
          - path: /(.*)
   
            pathType: Prefix
   
            backend:
   
              service:
   
                name: echo-app-svc
   
                port:
   
                  number: 8080
